--- a/default/data/ui/alerts/httpalert.html
+++ b/default/data/ui/alerts/httpalert.html
@@ -16,7 +16,7 @@
 
   <splunk-control-group label="Verify SSL Certificate" help="Verify the SSL certificate of the endpoint">
     <splunk-select name="action.httpalert.param.verify_ssl_certificate" id="httpalert_verify_ssl_certificate">
-      <option value="1">True</option>
+      <option value="1" selected>True</option>
       <option value="0">False</option>
     </splunk-select>
   </splunk-control-group>
